--- a/Spring_3_Sandbox_3.ipynb
+++ b/Spring_3_Sandbox_3.ipynb
@@ -6,7 +6,7 @@
       "name": "Spring_3_Sandbox_3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPx9dtwpQHKcG9DGWB7NeEq",
+      "authorship_tag": "ABX9TyMQH/TFKTnW24jQsnyH/NKT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,18 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/JF11579/Adelphi/blob/main/Spring_3_Sandbox_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YsKroOF8MHKv"
+      },
+      "source": [
+        "We used sk learn  croww validate -- segreation becasue our data is so uneven.  In psrticular we have aa once in a 1 yr event.\n",
+        "\n",
+        "\n",
+        "We used ordinal becasue the dates have influence on what follows.  I dont think one would get he sam reuslts if randomized"
       ]
     },
     {
@@ -1360,12 +1372,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 424
-        },
-        "id": "2rjzs0sbIT_y",
-        "outputId": "324d67cf-d11e-4afb-9ad3-aecb120c56de"
+        "id": "2rjzs0sbIT_y"
       },
       "source": [
         "def get_coefficients(model,X):\n",
@@ -1375,116 +1382,8 @@
         "\n",
         "get_coefficients(model,X)"
       ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>label</th>\n",
-              "      <th>coeff</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>date</td>\n",
-              "      <td>4.620241e-04</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Seasonal</td>\n",
-              "      <td>0.000000e+00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>Consumer_loans</td>\n",
-              "      <td>-8.404803e-07</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>Construction_lic_unt</td>\n",
-              "      <td>7.362191e-05</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>Construction_lic_area</td>\n",
-              "      <td>9.891178e-08</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>937</th>\n",
-              "      <td>Treasury_loanlag_12</td>\n",
-              "      <td>2.532376e-08</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>938</th>\n",
-              "      <td>Housing_loanlag_12</td>\n",
-              "      <td>5.257684e-09</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>939</th>\n",
-              "      <td>holiday</td>\n",
-              "      <td>-0.000000e+00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>940</th>\n",
-              "      <td>sunday</td>\n",
-              "      <td>-0.000000e+00</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>941</th>\n",
-              "      <td>working_day</td>\n",
-              "      <td>0.000000e+00</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>942 rows × 2 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                     label         coeff\n",
-              "0                     date  4.620241e-04\n",
-              "1                 Seasonal  0.000000e+00\n",
-              "2           Consumer_loans -8.404803e-07\n",
-              "3     Construction_lic_unt  7.362191e-05\n",
-              "4    Construction_lic_area  9.891178e-08\n",
-              "..                     ...           ...\n",
-              "937    Treasury_loanlag_12  2.532376e-08\n",
-              "938     Housing_loanlag_12  5.257684e-09\n",
-              "939                holiday -0.000000e+00\n",
-              "940                 sunday -0.000000e+00\n",
-              "941            working_day  0.000000e+00\n",
-              "\n",
-              "[942 rows x 2 columns]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1492,7 +1391,141 @@
         "id": "3aFNws4bIVEb"
       },
       "source": [
-        ""
+        "coef_df = pd.DataFrame(get_coefficients(model,X))"
+      ],
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y4pdixFkJAfZ",
+        "outputId": "d03d14c2-0d96-4d87-a232-b436cc5b4db2"
+      },
+      "source": [
+        "coef_df.shape\n",
+        "\n"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(942, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rotLMw2wKRNO",
+        "outputId": "fc64e490-1edf-4131-c658-8a20eacad2cd"
+      },
+      "source": [
+        "coef_df.dtypes"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "label     object\n",
+              "coeff    float64\n",
+              "dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dNtEP338J5z5"
+      },
+      "source": [
+        "Let us drop zero values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eeaLnSPOJ8nR"
+      },
+      "source": [
+        "#coef_df = coef_df[ > 0]\n",
+        "coef_df = coef_df[coef_df['coeff'] != 0]"
+      ],
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hfdt5ViKLwl0",
+        "outputId": "8de7be85-43bf-4a8c-fc6a-8dfd996fc6d0"
+      },
+      "source": [
+        "coef_df.shape\n"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(633, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "12loKIe2JTo7"
+      },
+      "source": [
+        "# who v/s fare barplot\n",
+        "plt.figure(figsize=(5,200))\n",
+        "sns.barplot(y = 'label',\n",
+        "            x = 'coeff',\n",
+        "            data = coef_df,\n",
+        "            orient='h')\n",
+        " \n",
+        "# Show the plot\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v7b7AQv8JpjQ"
+      },
+      "source": [
+        "sns.histplot(data = coef_df\n",
+        "            ,x = 'coeff'\n",
+        "            )"
       ],
       "execution_count": null,
       "outputs": []
